# pymaginverse

./: .gitignore  INSTALL.md  LICENSE  README.md  Tutorial Geomagnetic Field Inversions-Copy1.ipynb  build_extension.py  pyproject.toml  setup.py
.github/workflows/: build_and_publish_pypi.yml  build_and_publish_testpypi.yml  publishpypi_newtag.yml  testpublish_testpypi.yml
benchmark_data/: iteration_1  iteration_10  newmod  testdata.csv
benchmark_data/model1/: InPtEmP  all5-131-1  avcoefs.file  clean.csh  inputtd  modintd.dipole  new5-131-1.it1  new5-131-1.it10  new5-131-1.it11  new5-131-1.it12  new5-131-1.it13  new5-131-1.it14  new5-131-1.it15  new5-131-1.it16  new5-131-1.it17  new5-131-1.it18  new5-131-1.it19  new5-131-1.it2  new5-131-1.it20  new5-131-1.it21  new5-131-1.it22  new5-131-1.it23  new5-131-1.it24  new5-131-1.it25  new5-131-1.it26  new5-131-1.it27  new5-131-1.it28  new5-131-1.it29  new5-131-1.it3  new5-131-1.it4  new5-131-1.it5  new5-131-1.it6  new5-131-1.it7  new5-131-1.it8  new5-131-1.it9  newmod  normres  norms  speccomp.csh  speccomp.ps  (+3 more)
benchmark_data/modelnxyz/: InPtEmP  aall5-131-1  all1-121-1  all5-131-1  anew5-131-1.it1  anew5-131-1.it2  anew5-131-1.it4  avcoefs.file  ddata  dirdata  gufm4cals.coefs  inputtd  modintd  modintd.dipole  modintd.dipole~  new1-121-1.it1  new5-131-1.it1  new5-131-1.it10  new5-131-1.it2  new5-131-1.it3  new5-131-1.it4  new5-131-1.it5  new5-131-1.it6  new5-131-1.it7  new5-131-1.it8  new5-131-1.it9  normres  norms  spec.csh  speccomp.csh  speccomp.ps  sweeptd.csh  sweeptd.csh~  zeromod
benchmark_data/modelrev/: InPtEmP  all5-131-1  allnorms  avcoefs.file  damp_matrix.npz  inputtd  modintd  modintd.reverse  new5-131-1.it1  new5-131-1.it10  new5-131-1.it11  new5-131-1.it12  new5-131-1.it13  new5-131-1.it14  new5-131-1.it15  new5-131-1.it16  new5-131-1.it17  new5-131-1.it18  new5-131-1.it19  new5-131-1.it2  new5-131-1.it20  new5-131-1.it21  new5-131-1.it22  new5-131-1.it23  new5-131-1.it24  new5-131-1.it25  new5-131-1.it26  new5-131-1.it27  new5-131-1.it28  new5-131-1.it29  new5-131-1.it3  new5-131-1.it4  new5-131-1.it5  new5-131-1.it6  new5-131-1.it7  new5-131-1.it8  new5-131-1.it9  normres  norms  speccomp.csh  (+2 more)
doc/: FieldInversion_example.py  Sweeping_models.py  Tutorial Geomagnetic Field Inversions.ipynb  Tutorial_1_LoadingData+RunningModel.ipynb  Tutorial_2_Plotting.ipynb  Tutorial_3_SweepingModels.ipynb  Tutorial_4_GeomagiaData.ipynb  example_data.csv  first run_reversetime.xlsx  geomagia_data.csv  multi_station.xlsx
doc/output/: output.txt
geomagnetic_field_inversions/: __init__.py  data_prep.py  field_inversion.py  plot_tools.py
geomagnetic_field_inversions/banded_tools/: build_banded.pyx  calc_nonzero.pyx  utils.py
geomagnetic_field_inversions/damping_modules/: damp_types.py  damping.py
geomagnetic_field_inversions/forward_modules/: __init__.py  frechet.py  fwtools.py  rejection.py
pymaginverse/: __init__.py  data_prep.py  field_inversion.py
test/: test_forward_obs.py  test_inversion.py  test_pymagglobal.py  test_sampling.py  test_write.py
(+23 files in other folders)
