[tool.poetry]
name = "geomagnetic-field-inversions"
version = "1.0.0"
description = "Python Library performing Geomagnetic Field inversions for (paleo)magnetic data"
authors = ["Frenk Out <outfrenk@gmail.com>",
		   "Liz van Grinsven",
		   "Monika Korte",
		   "Lennart de Groot"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = ">=1.21, <1.25"
scipy = "^1.11.2"
pandas = "^2.0.3"
pathlib = "^1.0.1"
tqdm = "^4.66.1"
matplotlib = "^3.7.2"
Cartopy = "^0.22.0"
pyshtools = "^4.10.3"
jupyter = "^1.0.0"
ipykernel = "^6.25.1"
numba = "^0.57.1"

[tool.poetry.group.tutorial.dependencies]
openpyxl = "^3.1.2"

[tool.poetry.group.test]
optional= true
[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
